gateway/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
