gateway/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: api.hide.saurabhagat.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
    - host: typesense.hide.saurabhagat.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: typesense
                port:
                  number: 8108
  tls:
    - hosts:
        - api.hide.saurabhagat.me
        - typesense.hide.saurabhagat.me
      secretName: gateway-tls
